# tinyml-nrf7002dk

./: .gitignore
firmware/: CMakeLists.txt  prj.conf
firmware/include/: dsp.h  inference.h  mel_constants.h  model.h
firmware/src/: data.c  dsp.c  inference.cpp  main.c  model.cpp  model.tflite
training/outputs/: model.keras  model.tflite  model_data.txt
training/scripts/: gen_mel_header.py  quantize.py  train_kws.py  visualize_dsp.py  wav_to_c.py
